# pulp2mat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
pulp2mat/: __init__.py  lp2mat.py
tests/: test_binpacking.py
