[tool.poetry]
name = "pulp2mat"
version = "0.1.0"
description = "convert pulp model into matrix formulation for scipy.optimize.milp"
authors = ["rtonoue <rtonoue625@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PuLP = "^2.6.0"
numpy = "^1.23.2"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
