[tool.poetry]
name = "pulp2mat"
version = "0.1.3"
description = "convert pulp model into matrix formulation for scipy.optimize.milp"
authors = ["rtonoue <rtonoue625@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rtonoue/pulp2mat"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PuLP = "^2.6.0"
numpy = "^1.23.2"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
