[project]
name = "pulp2mat"
version = "0.1.4"
description = "convert pulp model into matrix formulation for scipy.optimize.milp"
readme = "README.md"
repository = "https://github.com/rtonoue/pulp2mat"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["CHANGELOG.md"]
requires-python = ">=3.8,<3.12"
dependencies = [
    "PuLP >=2.6.0",
    "numpy >=1.23.2",
    "scipy >=1.9.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"